--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:staged": "jest --onlyChanged",
     "test:verbose": "jest --silent=false --verbose"
   },
+  "dependencies": {
+    "pino": "^9.9.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
@@ -41,5 +44,6 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
-  }
+  },
+  "packageManager": "pnpm@10.15.0"
 }
