--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
       "@application/*": ["src/application/*"],
       "@presentation/*": ["src/presentation/*"],
       "@infra/*": ["src/infra/*"],
-      "@main/*": ["src/main/*"]
+      "@main/*": ["src/main/*"],
+      "@mocks/*": ["__mocks__/*"]
     }
   },
-  "include": ["src", "__tests__"],
+  "include": ["src", "__tests__", "__mocks__"],
   "exclude": ["node_modules", "dist"]
 }
