--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Sistema de gerenciamento dos recursos operacionais disponíveis no Corpo de Bombeiros Militar do Estado de Goiás.",
   "main": "dist/main/index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main/index.js",
+    "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./dist",
+    "dev": "tsx src/main/server.ts",
+    "start": "node ./dist/main/server.js",
     "format": "prettier --write .",
     "lint": "eslint --fix .",
     "prepare": "husky",
@@ -18,6 +19,7 @@
     "test:verbose": "jest --silent=false --verbose"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "pino": "^9.9.0"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
     "@eslint/js": "^9.33.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "eslint": "^9.33.0",
@@ -42,6 +45,8 @@
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tscpaths": "^0.0.9",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
   },
