--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,5 @@
   "version": 2,
   "devCommand": "pnpm dev",
   "buildCommand": "pnpm build",
-  "installCommand": "pnpm install",
-  "framework": "express",
-  "outputDirectory": "dist"
+  "installCommand": "pnpm install"
 }
