refactor: add types in tsconfig

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,7 +11,7 @@
       "@infra/*": ["infra/*"],
       "@main/*": ["main/*"]
     },
-    "types": ["node", "express", "pino"]
+    "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "__tests__", "__mocks__"]
