refactor: clear project

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "baseUrl": "src",
+    "rootDir": "./src",
+    "baseUrl": "./src",
     "paths": {
       "@domain/*": ["domain/*"],
       "@application/*": ["application/*"],
@@ -13,5 +13,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "__tests__", "__mocks__"]
+  "exclude": ["node_modules", "__tests__", "__mocks__"]
 }
