--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main/index.js",
   "scripts": {
     "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s . -o ./dist",
-    "dev": "tsx src/main/server.ts",
+    "dev": "tsx api/server.ts",
     "start": "node ./dist/api/server.js",
     "format": "prettier --write .",
     "lint": "eslint --fix .",
